make large numbers on the y-axis of a diagram more visible + rounding small numbers correctly

--- a/app/assets/stylesheets/testing_grounds.css.scss
+++ b/app/assets/stylesheets/testing_grounds.css.scss
@@ -285,3 +285,7 @@ form.inline .field_with_errors {
 table.table.scenarios{
   margin-top: 20px;
 }
+
+.container .node-info svg.nvd3-svg{
+  overflow: visible;
+}
